Update README.md with hybrid search feature, documentation links, and config
- Add Semantic/Hybrid Search to features list with link to VECTORSEARCH.md
- Add Documentation section linking VECTORSEARCH.md, ONNX.md, PIPELINE.md
- Add Vector/Hybrid Search configuration subsection with JVM property table

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>